# SPITE-Engine

./: .editorconfig  .gitignore  AffineTransform.cpp  AffineTransform.h  AppConifg.h  EventManager.h  GraphicsEngine.cpp  GraphicsEngine.h  GraphicsUtility.cpp  GraphicsUtility.h  Main.cpp  Model2D.h  README.md  SPITE Engine.vcxproj  SPITE Engine.vcxproj.filters  SPITE.sln  SPITE.vcxproj  SPITE.vcxproj.filters  VulkanApplication.sln  VulkanApplication.vcxproj  VulkanApplication.vcxproj.filters  VulkanUsage.h  WindowManager.h  cube.txt  main.txt  test.txt  test2.txt  test3.txt  vcpkg.json
Application/: AppConifg.h  AppConifg.hpp  EventManager.cpp  EventManager.h  EventManager.hpp  Events.hpp  InputManager.cpp  InputManager.hpp  WindowManager.cpp  WindowManager.h  WindowManager.hpp
Base/: Assert.hpp  File.cpp  File.hpp  GlfwUsage.cpp  Logging.cpp  Logging.hpp  Memory.cpp  Memory.hpp  Platform.hpp  Service.hpp  VmaUsage.cpp  VmaUsage.hpp
Engine/: Common.hpp  Core.cpp  Core.hpp  Debug.cpp  Debug.hpp  EngineCommon.hpp  EngineCore.cpp  EngineCore.hpp  EngineDebug.cpp  EngineDebug.hpp  GraphicsDebug.cpp  GraphicsDebug.h  GraphicsDebug.hpp  GraphicsEngine.cpp  GraphicsEngine.h  GraphicsEngine.hpp  GraphicsUtility.cpp  GraphicsUtility.h  GraphicsUtility.hpp  Modules.cpp  Modules.hpp  Renderer.hpp  RenderingCore.cpp  RenderingCore.hpp  Resources.cpp  Resources.hpp  ResourcesCore.cpp  ResourcesCore.hpp  VulkanAllocator.cpp  VulkanAllocator.hpp
Tests/: CMakeLists.txt
Tests/source/: AllocatorTests.cpp  EcsTests.cpp  EcsTests.hpp  Tests.cpp
config/: InputActions.json
(+353 files in other folders)
